# architecture-next-2025

./: .rooignore
codevalue_architect_assistant_v1/: .clinerules  .clinerules-architect  .gitignore  prompt.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt
codevalue_architect_assistant_v1/.cursor/rules/: error-documentation.mdc  lessons-learned.mdc
codevalue_architect_assistant_v1/docs/: architecture.md  product_requirement_docs.md  technical.md
codevalue_architect_assistant_v1/src/codevalue_architect_assistant/: __init__.py  cli.py  models.py
codevalue_architect_assistant_v1/src/codevalue_architect_assistant/analysis/: __init__.py  dependency_resolver.py  javascript_parser.py  language.py  python_parser.py  usecase_finder.py
codevalue_architect_assistant_v1/src/codevalue_architect_assistant/diagrams/: __init__.py  mermaid_generator.py  plantuml_generator.py
codevalue_architect_assistant_v1/src/codevalue_architect_assistant/utils/: __init__.py  filesystem.py
codevalue_architect_assistant_v1/tasks/: active_context.md  tasks_plan.md
codevalue_architect_assistant_v1/tests/: __init__.py  test_cli.py
codevalue_architect_assistant_v1/tests/analysis/: __init__.py  test_dependency_resolver.py  test_javascript_parser.py  test_language.py  test_python_parser.py  test_usecase_finder.py
codevalue_architect_assistant_v1/tests/diagrams/: __init__.py  test_mermaid_generator.py  test_plantuml_generator.py
codevalue_architect_assistant_v1/tests/utils/: __init__.py  test_filesystem.py
codevalue_architect_assistant_v2/.roo/rules-architect/: 01-best-practices.md
codevalue_architect_assistant_v2/cv-architect-assistant/: README.md  pyproject.toml  setup.py
codevalue_architect_assistant_v2/cv-architect-assistant/cvaa/: __init__.py  main.py
codevalue_architect_assistant_v2/cv-architect-assistant/src/: main.py
codevalue_architect_assistant_v2/memory-bank/: activeContext.md  decisionLog.md  productContext.md  progress.md  systemPatterns.md
presentation/: Vibe Coding.pptx  presentation_intro_slides.md  presentation_outline.md  readme.md  take1.md  tasks.md
presentation/demo_naive_run/: initial_architect_prompt.md
presentation/help/: initial-prompt.md
shared/: common-knowledge.md
