[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-architect-assistant"
version = "0.0.1"
authors = [
  { name="CodeValue", email="author@example.com" },
]
description = "A command-line tool for architectural assistance."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
cv-architect = "src.main:main"

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"